--- a/Grid/pluralsight/Building_Layouts_w_CSS_Grid/css/main.css
+++ b/Grid/pluralsight/Building_Layouts_w_CSS_Grid/css/main.css
@@ -56,37 +56,90 @@ section#hero {
     text-transform: uppercase;
     color: #fffbc5;
 }
-
 #content p {
     color: #fff;
 }
-
 img {
     max-width: 100%;
     background-size: cover;
     margin: 0 auto;
 }
-
 #mountain {
     border-radius: 50%;
     width: 200px;
     height: 200px;
 }
-
 .sidebar {
     grid-area: sidebar;
     background: #1c9090;
     color: #fff;
     padding: 1em;
 }
-
 .main {
     grid-area: right;
-    grid-template-rows: 51px fit-content(30%);
+    grid-template-rows: 51px fit-content(30%) 40%;
     display: grid;
+    /* grid-template-columns: 800px;
+    justify-content: center; */
 }
-
 footer {
     grid-area: footer;
     background-color: lightgray;
+}
+
+#features {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    text-align: center;
+    /* align-items: center; */
+}
+#features i {
+    font-size: 2em;
+}
+ul#features {
+    margin: 0;
+    padding: 0;
+}
+ul#features li {
+    background-color: lightgray;
+    padding: 1em;
+    align-self: start;
+}
+/* ul#features li:nth-child(3) {
+    justify-self: end;
+} */
+ul#features li p {
+    color: #4c4c4c;
+}
+
+ul#features li:nth-child(1) {
+    background-color: #e6e6e6;
+}
+ul#features li:nth-child(2) {
+    background-color: #d3d3d3;
+    align-self: center;
+}
+ul#features li:nth-child(3) {
+    background-color: #cacaca;
+}
+ul#features li:nth-child(4) {
+    background-color: #e6e6e6;
+    align-self: center;
+}
+ul#features li:nth-child(5) {
+    background-color: #d3d3d3;
+}
+
+section#info {
+    background-color: #f2f2f2;
+    padding: 2em;
+
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    align-items: space-around;
+}
+
+#mountain-vector {
+    width: 200px;
+    align-self: center;
 }
