--- a/Grid/pluralsight/Building_Layouts_w_CSS_Grid/css/main.css
+++ b/Grid/pluralsight/Building_Layouts_w_CSS_Grid/css/main.css
@@ -5,7 +5,7 @@ body, html {
 }
 body {
     margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display: grid;
     grid-template-rows: auto 50px;
     grid-template-columns: 12% auto;
@@ -180,5 +180,70 @@ section#info {
 
     ul#features li:nth-child(5) {
         grid-column: 1 / span 2;
+    }
+}
+
+@media screen and (max-width: 40em){
+    .main {
+        grid-template-rows: auto fit-content(30%) 40% auto;
+        grid-template-areas: 
+            "head"
+            "hero"
+            "inventions"
+            "features";
+    }
+
+    header {
+        grid-template-columns: auto;
+        grid-template-rows: repeat(2, auto);
+    }
+
+    nav ul {
+        float: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+
+    nav ul li a {
+        width: calc(25% - 35px);
+        display: inline-block;
+        font-size: .9em;
+    }
+
+    section#hero, section#info {
+        grid-template-columns: auto;
+        text-align: center;
+    }
+
+    h1, h2 {
+        font-size: 1.2em;
+    }
+
+    #mountain {
+        width: 100px;
+        height: 100px;
+    }
+
+    #content p, #content2 p {
+        font-size: .9em;
+    }
+
+    #features {
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(4, auto);
+    }
+
+    ul#features li:nth-child(1), ul#features li:nth-child(2)  {
+        grid-column: 1 / span 2;
+    }
+
+    footer {
+        background-color: #41c7c7;
+    }
+
+    footer p {
+        color: #fff;
+        text-align: center;
     }
 }
